# ambitus-ai-models

./: .env.template  .gitignore  .pdm-python  Experiment 03- LLM_Comparison_for_Agent1_.ipynb  Experiment_06_UseCaseGeneratorAgent.ipynb  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-publish.yml
api/: main.py  readme.md
docs/: README.md  agent_specs.md  system_overview.md
docs/assets/flowcharts/: README.md
notebooks/: Experiment 01- Search_API_Comparison_for_Haystack_Agent1.ipynb  Experiment 02- Swarm Orchestrator+Reseach Agent.ipynb  Experiment 04- .ipynb  Experiment 04- Research Agent using Agent Component.ipynb  Experiment 05.2- Technlogy Extractor Tool.ipynb
src/: cli.py  readme.md  run_agent.py
src/agents/: __init__.py  company_research_agent.py  industry_analysis_agent.py  market_data_agent.py  market_gap_agent.py  opportunity_agent.py  report_synthesis_agent.py  research_agent.py  researcher.py  tech_extractor.py
src/ambitus-ai-models/agents/: readme.md
src/ambitus-ai-models/core/: readme.md
src/ambitus-ai-models/pipelines/: readme.md
src/ambitus-ai-models/tools/: search.py  (+1 more)
src/ambitus_ai_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api/: routes.py
src/cli/: main.py
src/data/: readme.md
src/mcp/: readme.md  server.py
src/orchestrator/: readme.md
src/pipeline/: pipeline.py
src/services/: readme.md
src/tools/: __init__.py  readme.md  search.py  tech_extract.py
src/utils/: __init__.py  llm_factory.py  mcp_manager.py  models.py  readme.md  validation.py
(+27 files in other folders)
